--- a/Store/Properties/launchSettings.json
+++ b/Store/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:12751",
-      "sslPort": 44317
+      "applicationUrl": "http://localhost:45228",
+      "sslPort": 44367
     }
   },
   "profiles": {
-    "WebAppNotes": {
+    "Store": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7054;http://localhost:5054",
+      "applicationUrl": "https://localhost:7205;http://localhost:5205",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
