--- a/Store/appsettings.json
+++ b/Store/appsettings.json
@@ -4,5 +4,8 @@
     "AuthorName": "Anton",
     "Nickname": "konarparti",
     "Github": "github.com/konarparti"
+  },
+  "Identity": {
+    "ConnectionString": "Data Source=localhost\\SQLEXPRESS; Database=IdentityWebStore; Persist Security Info=false; User ID='sa'; Password='sa'; MultipleActiveResultSets=True; Trusted_Connection=False;"
   }
 }
